# semgrep-rule-compiler

./: .gitignore  CLAUDE.md  CLAUDE_CODE_PROMPT.md  PLAN.md  README.md  pyproject.toml
.claude/commands/: check-pattern.md  compile.md  new-spec.md  verify.md
.github/workflows/: compile.yml  verify.yml
incidents/001-jwt-in-logs/: bad.py  good.py  incident.md
incidents/002-sql-fstring/: bad.py  good.py  incident.md
incidents/003-requests-no-timeout/: bad.py  incident.md
rules/: 001-secrets-in-logs.yaml  002-http-timeout.yaml  003-sql-string-building.yaml
specs/001-secrets-in-logs/: bad.py  good.py  source.md
specs/002-http-timeout/: good.py  source.md
specs/003-sql-string-building/: bad.py  good.py  source.md
src/srcompile/: __init__.py  cli.py  compiler.py  validator.py
src/srcompile/prompts/: rule_from_incident.md  rule_from_source.md
tests/: test_validator.py
